syntax = "proto3";

package poker.proto;

option java_multiple_files = true;
option java_package = "poker.proto";

message BettingActionLog {
  oneof log {
    NoActionLog noAction = 1;
    PostLog postAction = 2;
    FoldLog foldAction = 3;
    CheckLog checkAction = 4;
    CallLog callAction = 5;
    BetLog betAction = 6;
    RaiseLog raiseAction = 7;
  }
}

message NoActionLog {}
message PostLog {}
message FoldLog {}
message CheckLog {}
message CallLog {}
message BetLog {}
message RaiseLog {}


message BettingActionRequest {
  string actionToken = 1;

  oneof request {
    FoldRequest foldAction = 2;
    CheckRequest checkAction = 3;
    CallRequest callAction = 4;
    BetRequest betAction = 5;
    RaiseRequest raiseAction = 6;
  }
}

message FoldRequest {}
message CheckRequest {}
message CallRequest {}
message BetRequest { int32 chips = 2; }
message RaiseRequest { int32 chips = 2; }


message BettingActionOption {
  oneof option {
    FoldOption foldOption = 1;
    CheckOption checkOption = 2;
    CallOption callOption = 3;
    BetOption betOption = 4;
    RaiseOption raiseOption = 5;
  }
}

message FoldOption {}
message CheckOption {}
message CallOption {}
message BetOption { int32 minBet = 1; }
message RaiseOption { int32 minRaise = 1; }
