syntax = "proto3";

package poker.proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Betting.proto";
import "Cards.proto";

option java_multiple_files = true;
option java_package = "poker.proto";

message Player {
  int32 seat = 1;
  int32 stack = 2;
  int32 bet = 3;
  BettingActionLog actionLog = 4;
  repeated Card holeCards = 5;
}

message PlayerJoinRequest {
  int32 seat = 1;
}

message PlayerRemoveRequest {
  int32 seat = 1;
}

